fix: footer overlaps content

--- a/less/themes/pirat.less
+++ b/less/themes/pirat.less
@@ -472,6 +472,10 @@ section.container {
   display: none;
 }
 
+.sticky-footer-body {
+  margin-bottom: 150px;
+}
+
 footer.page-footer {
   color: @footer-color;
   background-color: @footer-bg;
